# easyinput

./: Cargo.toml  README.md
examples/: usage.rs
src/: lib.rs
